# ping-monitor

./: .gitignore  NOTES.md  README.md  __init__.py  config.toml  main.py  manifest.yaml  pyproject.toml  settings.yaml  showcase.py  trait_cli.yaml  trait_settings-hub.yaml  trait_systemd-service.yaml
examples/: showcase.py
pkg/systemd/: ping-monitor.service
src/: history.db  main.py
