[project]
name = "ping-monitor"
version = "0.1.0"
description = "Network latency and connectivity monitoring with history tracking"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Ckrest"}]
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
showcase = ["graph-lib"]

[project.urls]
Repository = "https://github.com/Ckrest/ping-monitor"

[project.scripts]
ping-monitor = "main:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
